feat: add seo tags, clean code

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Adam Andrysiak Portfolio - JavaScript Developer" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="%PUBLIC_URL%/#AboutMe" />
+    <meta property="twitter:domain" content="%PUBLIC_URL%/#About" />
     <meta property="twitter:url" content="%PUBLIC_URL%" />
     <meta name="twitter:title" content="Portfolio | Adam Andrysiak" />
     <meta name="twitter:description" content="Adam Andrysiak Portfolio - JavaScript Developer" />
@@ -27,6 +27,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
   </body>
 </html>
